# ANC

./: .clang-format  .clangd  ANC_LEARNING_PLAN.md  ANC_PROGRESS.md  CMakeLists.txt  README.md  demo.html  fir_output.csv  lms_anc_analysis.md  main.c
.claude/: settings.local.json
Headers/: BlockLMSFilter.h  FIRFilter.h  FxLMSFilter.h  LMSFilter.h  capture.h  common.h  constants.h  delay_tests.h  playback.h  processing.h  subband_filtering_constants.h  test_commons.h
Mains/: delay_check.cpp  feedforward_anc.cpp  feedforward_anc_subband.cpp  fxlmstest.cpp  lmstest.cpp  offline_sec_path_modelling.cpp
Sources/: capture.cpp  common.cpp  delay_tests.cpp  playback.cpp  processing.cpp
src/: fir_demo.c  lms_anc_demo.c  lms_demo.c  loopback.c  main.c  pb_test.c
